--- a/v.lang
+++ b/v.lang
@@ -30,7 +30,7 @@
     <style id="boolean" name="Boolean Value" map-to="def:boolean"/>
     <style id="decimal" name="Decimals" map-to="def:decimal"/>
     <style id="floating-point" name="Floating point number" map-to="def:floating-point"/>
-    <style id="builtin-function"  name="Builtin Function"    map-to="def:builtin"/>
+    <style id="builtin-function" name="Builtin Function" map-to="def:builtin"/>
     <style id="operator" name="Operator" map-to="def:operator"/>
     <style id="keyword" name="Keyword" map-to="def:keyword"/>
     <style id="type" name="Basic Types" map-to="def:type"/>
@@ -105,7 +105,7 @@
             </context>
 
             <context id="operator" style-ref="operator">
-                <match>[-^:\(\)\|\!\=\+\*&amp;&lt;&gt;\?]</match>
+                <match>[-^:\(\)\|\!\=\+\*&amp;&lt;&gt;\?\[\]]</match>
             </context>
 
             <context id="keywords" style-ref="keyword" class-disabled="no-spell-check">
